--- a/ViewController/public_html/create/whodWizardSearch.jspx
+++ b/ViewController/public_html/create/whodWizardSearch.jspx
@@ -131,20 +131,23 @@
                                         </af:panelGroupLayout>
                                     </af:panelGroupLayout>
                                     <af:separator id="s5"/>
-                                    <af:panelGroupLayout id="pgl3" layout="horizontal">
-                                        <af:spacer width="10" height="10" id="s2"/>
-                                        <af:inputText label="Term " id="it5" helpTopicId="NMAT_HELP_TERM" wrap="off"
-                                                      labelStyle="white-space:nowrap" columns="40" autoSubmit="true"
-                                                      value="#{pageFlowScope.WhodWizardSearchBean.paramTerm}"/>
-                                        <af:spacer width="10" height="10" id="s9"/>
-                                        <af:inputText label="Code" id="it4" helpTopicId="NMAT_HELP_MQCODE" wrap="off"
-                                                      labelStyle="white-space:nowrap" columns="8" autoSubmit="true"
-                                                      value="#{pageFlowScope.WhodWizardSearchBean.paramCode}"/>
-                                        <af:spacer width="10" height="10" id="s8"/>
-                                        <af:commandButton text="Search" id="cb2"
-                                                          actionListener="#{pageFlowScope.WhodWizardSearchBean.doSearch}"
-                                                          partialSubmit="true"/>
-                                    </af:panelGroupLayout>
+                                    <af:subform id="s4" defaultCommand="cb2">
+                                        <af:panelGroupLayout id="pgl3" layout="horizontal">
+                                            <af:spacer width="10" height="10" id="s2"/>
+                                            <af:inputText label="Term " id="it5" helpTopicId="NMAT_HELP_TERM" wrap="off"
+                                                          labelStyle="white-space:nowrap" columns="40" autoSubmit="true"
+                                                          value="#{pageFlowScope.WhodWizardSearchBean.paramTerm}"/>
+                                            <af:spacer width="10" height="10" id="s9"/>
+                                            <af:inputText label="Code" id="it4" helpTopicId="NMAT_HELP_MQCODE"
+                                                          wrap="off" labelStyle="white-space:nowrap" columns="8"
+                                                          autoSubmit="true"
+                                                          value="#{pageFlowScope.WhodWizardSearchBean.paramCode}"/>
+                                            <af:spacer width="10" height="10" id="s8"/>
+                                            <af:commandButton text="Search" id="cb2"
+                                                              actionListener="#{pageFlowScope.WhodWizardSearchBean.doSearch}"
+                                                              partialSubmit="true"/>
+                                        </af:panelGroupLayout>
+                                    </af:subform>
                                 </af:panelGroupLayout>
                                 <af:panelGroupLayout id="pgl1" layout="horizontal" styleClass="AFStretchWidth"
                                                      inlineStyle="height:250px;">
@@ -153,7 +156,7 @@
                                               emptyText="#{bindings.WHODSimpleSearch1.viewable ? 'No data to display.' : 'Access Denied.'}"
                                               fetchSize="#{bindings.WHODSimpleSearch1.rangeSize}" rowBandingInterval="0"
                                               id="it1" columnStretching="column:c20" width="1134" rowSelection="single"
-                                              columnSelection="single" partialTriggers="::cb2"    
+                                              columnSelection="single" partialTriggers="::s4:cb2"    
                                               selectionListener="#{pageFlowScope.WhodWizardSearchBean.onTableNodeSelection}"  
                                               contentDelivery="immediate" filterVisible="true" autoHeightRows="-1"
                                               inlineStyle="height:230px;" persist="ALL"
