Dileep: VO tuning and set focus issues

--- a/ViewController/public_html/create/whodWizardSearch.jspx
+++ b/ViewController/public_html/create/whodWizardSearch.jspx
@@ -160,7 +160,8 @@
                                               selectionListener="#{pageFlowScope.WhodWizardSearchBean.onTableNodeSelection}"  
                                               contentDelivery="immediate" filterVisible="true" autoHeightRows="-1"
                                               inlineStyle="height:230px;" persist="ALL"
-                                              summary="This table gives search result">
+                                              summary="This table gives search result"
+                                              selectedRowKeys="#{bindings.WHODSimpleSearch1.collectionModel.selectedRow}">
                                         <af:column sortProperty="Term" sortable="true" headerText="Term" id="c20"
                                                    filterable="true" rowHeader="true" width="300" align="left"> 
                                             <af:outputText value="#{row.Term}" id="ot16"/>
