Modified for fixing the following issues. 1) Logo issue 2) Add Details page    a) The release status needs to be blank when a CURRENT SDG is selected.       At this point all SDGs are CURRENT; that is issue 1    b) Level field needs to display the SDG level, so if it is an SDG1 show 1, if it is an SDG2, display 2 3) Relations page    a) Display PTS first alphabetically, then display the ATC alphabetically

--- a/ViewController/public_html/create/whodAddDetails.jspx
+++ b/ViewController/public_html/create/whodAddDetails.jspx
@@ -58,7 +58,7 @@
                                                                id="si4"/>
                                             </af:selectOneChoice>
                                             <af:inputText label="Release Status" id="it11"
-                                                          value="#{pageFlowScope.WhodWizardBean.currentStatus}"
+                                                          value="#{pageFlowScope.WhodWizardBean.currentStatus ne 'CURRENT' ? pageFlowScope.WhodWizardBean.currentStatus : ''}"
                                                           showRequired="true" readOnly="true" columns="20" rows="1"
                                                           wrap="off" binding="#{WhodWizardUIBean.controlMQStatus}"
                                                           rendered="#{WhodRenderingRulesBean.wizardDetailsRenderNMQStatus}"
